--- a/templates/projects/new.html
+++ b/templates/projects/new.html
@@ -35,10 +35,10 @@
                         {{ form.status.label(class="form-label") }}
                         {{ form.status(class="form-select") }}
                     </div>
-                     <div class="mb-3">
-                        {{ form.manager.label(class="form-label") }}
-                        {{ form.manager(class="form-select") }}
-                    </div>
+                    <div class="mb-3">
+						{{ form.manager_id.label(class="form-label") }}
+						{{ form.manager_id(class="form-select") }}
+					</div>
                 </div>
                 <div class="col-md-6">
                     <div class="mb-3">
